# setflow

./: .env.example  .gitignore  CLAUDE.md  PROJECT_PLAN.md  README.md  docker-compose.yml
.claude/projects/-Users-miguelhernandez-Desktop-projects-setflow/memory/: MEMORY.md  feedback_cleanup_branches.md  feedback_confirm_before_push.md  feedback_no_credentials_in_repo.md  project_phase0_progress.md  reference_local_setup.md  user_profile.md
.claude/skills/to-issues/: SKILL.md
backend/: pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/: health.py  test_llm.py
backend/tests/: conftest.py  test_config.py  test_db.py  test_health.py  test_llm_routes.py
docs/: PRD.md
frontend/: package-lock.json
frontend/src/: App.tsx
tests/: test_docker_postgres.sh
